--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body onload="onInit()">
 
     <h1>Currency calculator</h1>
     <main>
@@ -36,12 +36,14 @@
 
                 <div class="calculator">
                     <div class="calculator-container">
-                        <select name="to-currency" placeholder="usd" aria-label="currency-type">
+                        <select name="curr-currency-type" placeholder="usd" aria-label="currency-type">
                             <option value="usd">usd</option>
                             <option value="ils">Ils</option>
                         </select>
                         <div class="input-border"></div>
-                        <input type="number">
+
+                        <input type="number" value="1" name="count-currency" autofocus
+                            oninput="onUpdateCoinsAmount(this.value)">
 
                     </div>
 
@@ -62,12 +64,12 @@
     </main>
 
 
-
     <script src="lib/axios.js"></script>
     <script src="lib/swal.js"></script>
     <script src="js/service/util-service.js"></script>
     <script src="js/service/storage-service.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/service/currency-service.js"></script>
+    <script src="js/controller.js"></script>
 </body>
 
 </html>
