The function dynamically renders the types of currencies in the select, as well as the inputs,And I added a transition to the input, to create a more pleasant UX

--- a/index.html
+++ b/index.html
@@ -35,28 +35,7 @@
                 </div>
 
                 <div class="calculator">
-                    <div class="calculator-container">
-                        <select name="curr-currency-type" placeholder="usd" aria-label="currency-type">
-                            <option value="usd">usd</option>
-                            <option value="ils">Ils</option>
-                        </select>
-                        <div class="input-border"></div>
-
-                        <input type="number" value="1" name="count-currency" autofocus
-                            oninput="onUpdateCoinsAmount(this.value)">
-
-                    </div>
-
-                    <div class="calculator-container">
-
-                        <select name="to-currency" placeholder="usd" aria-label="currency-type">
-                            <option value="usd">usd</option>
-                            <option value="ils">Ils</option>
-                        </select>
-                        <div class="input-border"></div>
-                        <input type="number">
-
-                    </div>
+                    <!-- render input from js here -->
                 </div>
 
             </div>
