The function _convertCurrency, works with real requests from the server (API), added date-Service that knows how to help with dates

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="lib/swal.js"></script>
     <script src="js/service/util-service.js"></script>
     <script src="js/service/storage-service.js"></script>
+    <script src="js/service/date-service.js"></script>
     <script src="js/service/currency-service.js"></script>
     <script src="js/controller.js"></script>
 </body>
